# filetagger

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: database-manager.cpp.0BEF44E9D4E4F6ED.idx  database-manager.h.DC6EE9E6870794B3.idx  file-scanner.cpp.2A7457D9541EB8C7.idx  file-scanner.h.7D991E161BE7E790.idx  file-tagger.cpp.FE9196A3621D13AD.idx  file-tagger.h.4226F5214ADE5EA0.idx  main.cpp.34CA076B5C29B25B.idx
.github/workflows/: install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
documentation/: CMakeLists.txt
documentation/pages/: about.dox
file-tagger/: database-manager.h  file-scanner.h  file-tagger.h
filetagger/: CMakeLists.txt
include/file-tagger/: database-manager.h  file-scanner.h  file-tagger.h
source/: database-manager.cpp  file-scanner.cpp  file-tagger.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: FileTagger.cpp
